--- a/contact.html
+++ b/contact.html
@@ -196,7 +196,7 @@
                       <textarea
                         class="form-control"
                         id="comments"
-                        name="message"
+                        name="messages"
                         placeholder="Talk to us *"
                       ></textarea>
                     </div>
